# ConsoleGo

./: CMakeLists.txt  README.md  board.c  display.c  main.c  play.c  rule.c  windows_display.c
include/: board.h  play.h  rule.h
src/: board.c  display.c  main.c  play.c  rule.c  windows_display.c
